# neurofly

./: .gitignore  pyproject.toml
neurofly/: __init__.py  image_reader.py  napari.yaml  segs_annotator.py
neurofly/backend/: action.py  neuron_graph.py  task_manager.py  tasks.py
neurofly/model/: __init__.py
neurofly/model/seg_fiber/: seger.py  segnet_tinygrad.py  segnet_torch.py
neurofly/model/tracer/: twoway_transformer.py
neurofly/neurodb/: image_reader.py  neurodb.py  neurodb_sqlite.py  sqliteDBIO.py
neurofly/util/: action.py  common.py  data_conversion.py  export_swc.py  interpolation.py  length.py  neurites.py  neuron_graph.py  task_manager.py
neurofly/viewer/: neuron_reconstructor.py  reconstructor.py  segmenter.py  simple_viewer.py  skeletonizer.py  viewer.py
neurofly/viewer/config/: config.py  config_default.yaml
neurofly/viewer/widget/: database_finder.py  image_finder.py  rec_interactor.py  res_ch_selector.py  resolution_channel_selector.py  roi_selector.py  seg_widgets.py  skel_widgets.py
