[project]
name = "neurofly"
version = "0.1.5"
description = "A framework to annotate single neurons at whole-brain scale"
authors = [
    { name="Rubin Zhao", email="beanli161514@gmail.com" },
    { name="Yang Liu", email="ryuuyou0529@gmail.com"}
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Framework :: napari",
    "Programming Language :: Python :: 3"
]

# Package dependencies, if any
dependencies = [
    "PyQt5",
    "napari",
    "Rtree",
    "networkx",
    "tqdm",
    "magicgui",
    "brightest-path-lib",
    "tifffile",
    "scikit-image",
    "scipy",
    "torch",
    "tinygrad==0.9.2",
    "h5py",
    "zarr"
]

[project.urls]
"Homepage" = "https://github.com/beanli161514/neurofly"

# Defining optional dependencies (not provided but can be added)
[project.optional-dependencies]
# Add optional dependencies if needed (e.g., gui = ["package_for_gui"])

[tool.setuptools.packages.find]
include = ["neurofly", "neurofly.*"]

[tool.setuptools.package-data]
"neurofly" = [
    "napari.yaml",
    "**/*.pth"
]

[project.entry-points."napari.manifest"]
neurofly = "neurofly:napari.yaml"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
